# Phone_Book_Validation

./: CMakeLists.txt  Name_Validation.cpp  Name_Validation.h  Phone_Book  Phone_Validation.cpp  Phone_Validation.h  README.md  book  main.cpp  phone_nums.txt  valid_list.txt
.github/workflows/: build.yaml
